feat: add com.rpl.agentorama.UI for starting the UI in IPC (#38)
* feat: add com.rpl.agentorama.UI for starting the UI in IPC

- change start-ui to return an AutoCloseable rather than Closeable
- add a :no-input-before-close option to avoid the readline before
  close
- add UI.start(ipc) and UI.start(ipc, options) static methods
- add UI.withOption()...start() builder like pattern to easily specify
  options
- add tests for UI class

* reify UI options

* clean up editor completions

* clean up

* gen ui options

* gen ui options